2003-02-24  Darin Adler  <darin@apple.com>

        Reviewed by Ken.

        - fixed 3179059 -- CSS1: capitalized letters should remain capitalized when
        text-transform: capitalize is applied

        * khtml/xml/dom_stringimpl.cpp: (DOMStringImpl::capitalize): Capitalize the first
        letters of words, but don't make any letters lowercase.

2003-02-23  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - fixed 3179181 -- KURL won't accept URLs with a query part and no / separating host name from path

        * kwq/KWQKURL.mm: (KURL::parse): Allow any path segment end character to end the host part of a
        URL, rather than allowing only a "/".

2003-02-21  Maciej Stachowiak  <mjs@apple.com>

        Back out last change, mondo layout regressions.

        * khtml/html/html_documentimpl.cpp:
        (HTMLDocumentImpl::close):

2003-02-21  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Dave.

	- fixed 3167642 - crash in renderArena.

        * khtml/html/html_documentimpl.cpp:
        (HTMLDocumentImpl::close): Clear the tokenizer early to avoid
	re-entering the onload handler - this was causing a massive
	overload of frames which finally caused a crash.

2003-02-21  Darin Adler  <darin@apple.com>

        Reviewed by Dave.

        - fixed a problem that was causing layout tests to give inconsistent results

        * kwq/KWQPixmap.mm:
        (QPixmap::size): Handle case of nil image so we don't use the uninitialized
        result of dispatching a method to a structure-returning function.
        (QPixmap::rect): Ditto.
        (QPixmap::width): Ditto.
        (QPixmap::height): Ditto.

2003-02-21  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - Made it possible to run the layout tests in a Deployment version

        * kwq/KWQRenderTreeDebug.cpp: (externalRepresentation): Remove #ifndef NDEBUG.
        * kwq/KWQRenderTreeDebug.h: Remove #ifndef NDEBUG.